--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="password">密码</string>
     <string name="login">登陆</string>
     <string name="forget_pass">忘记密码？</string>
-    <string name="remember_pwd">记住密码</string>
+    <string name="remember_pwd">下次自动登陆</string>
     <string name="login_fail">系统繁忙，请稍后登陆...</string>
 </resources>
