--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="bind_email">绑定邮箱</string>
     <string name="email_validation_code">邮箱验证码</string>
     <string name="email_code_have_been_sent">验证码已发送至以下邮箱地址\n请获取验证码以完成绑定</string>
+    <string name="me">我</string>
 </resources>
