--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="login_password_cannot_empty">登陆密码不能空哦!</string>
     <string name="app_name_pro">孝为先</string>
     <string name="reset_password">重置密码</string>
+    <string name="contacts">联系人</string>
 </resources>
