--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="app_name_pro">孝为先</string>
     <string name="reset_password">重置密码</string>
     <string name="contacts">联系人</string>
+    <string name="bind_family">绑定家人</string>
 </resources>
