添加及修改“我的家人”页面

--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="father">爸爸</string>
     <string name="male_or_female">先生/女士</string>
     <string name="relation_call">爸爸/妈妈/其他</string>
+    <string name="binded">已绑定</string>
 </resources>
