--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="detail_info">详细资料</string>
     <string name="your_password">您的登陆密码</string>
     <string name="verify_password">密码验证</string>
+    <string name="delete">删除</string>
+    <string name="add_to_destop">添加到桌面</string>
 </resources>
