修改登陆页面，添加登陆类型选择Dialog

--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -128,4 +128,8 @@
     <string name="view_more"><![CDATA[查看更多>>]]></string>
     <string name="write_down_your_evaluate">请写下您对这位服务者的评价</string>
     <string name="submit">提交</string>
+    <string name="user_type">用户类型</string>
+    <string name="children">子女</string>
+    <string name="server">服务者</string>
+    <string name="remember_login_user_type">记住用户登陆类型，下次不再提醒.\n(可以在APP 内切换哦!)</string>
 </resources>
