--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="verify_success">验证成功!</string>
     <string name="verify_code_is_wrong">验证码错误</string>
     <string name="re_send">重发</string>
+    <string name="re_send_verify_code">重发验证码</string>
 </resources>
