--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -143,4 +143,5 @@
     <string name="re_send_verify_code">重发验证码</string>
     <string name="call_phone">拨打</string>
     <string name="total_grade">总体评分</string>
+    <string name="accept">接受</string>
 </resources>
