--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name_icare">爱家</string>
+    <string name="app_name_icare">孝为先</string>
     <string name="loginName">手机号/邮箱</string>
     <string name="password">密码</string>
     <string name="login">登陆</string>
     <string name="forget_pass">忘记密码？</string>
-    <string name="remember_pwd">下次自动登陆</string>
+    <string name="auto_login">下次自动登陆</string>
     <string name="login_fail">系统繁忙，请稍后登陆...</string>
     <string name="my_first_visit">我逛逛先</string>
     <string name="i_dont_have_account">我还没有账号</string>
