--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -464,6 +464,7 @@
     <string name="verify_code">验证码</string>
     <string name="confirmpassword_cannot_empty">确认密码不能为空哦!</string>
     <string name="confirmpwd_not_equal_password">确认密码跟登陆密码不一致哦！</string>
+    <string name="verify_code_is_sending">验证码正在发送中, 请稍后</string>
 
 
 </resources>
