--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -498,6 +498,7 @@
     <string name="change_username_tips">好名字可以让别人更容易记住你</string>
     <string name="change_gender_tips">请选择您的性别</string>
     <string name="tag_tips">给自己加个标签，为自己代言!</string>
+    <string name="password_is_wrong">密码错误，请重试!</string>
 
 
     <integer-array name="google_colors">
