--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -499,6 +499,10 @@
     <string name="change_gender_tips">请选择您的性别</string>
     <string name="tag_tips">给自己加个标签，为自己代言!</string>
     <string name="password_is_wrong">密码错误，请重试!</string>
+    <string name="search_hint">手机号/邮箱</string>
+    <string name="search_result">搜索结果</string>
+    <string name="no_result">没有结果</string>
+    <string name="add">添加</string>
 
 
     <integer-array name="google_colors">
