--- a/iCare/app/src/main/res/values/strings.xml
+++ b/iCare/app/src/main/res/values/strings.xml
@@ -521,6 +521,10 @@
     <string name="input_birthday">请输入您的出生日期</string>
     <string name="choose_birthday">选择出生日期</string>
     <string name="register_family_success">注册家人成功，请等待家人验证!</string>
+    <string name="family_detail">家人详情</string>
+    <string name="remind_history">提醒记录</string>
+    <string name="event_record">事件记录</string>
+    <string name="hint_remark">备注能让您一眼认出对方</string>
 
 
     <integer-array name="google_colors">
